# MLOPS-DVC-AWSs3-

./: .gitignore  02DVC_Readme.md  Readme.md  data.dvc  data_science_pipeline.md  loggings.py  mycode.py  projectflow.txt  pyproject.toml
01_github/: first.py
02_dvc/: mycode.py
03_End_to_End_pipeline_DVC/: .gitignore  Readme.md  dvc.yaml  params.yaml  projectflow.txt
03_End_to_End_pipeline_DVC/.dvc/: config
03_End_to_End_pipeline_DVC/dvclive/: metrics.json  params.yaml
03_End_to_End_pipeline_DVC/dvclive/plots/metrics/: accuracy.tsv  precision.tsv
03_End_to_End_pipeline_DVC/experiments/: mynotebook.ipynb
03_End_to_End_pipeline_DVC/reports/: metrics.json
03_End_to_End_pipeline_DVC/src/: data_ingestion.py  data_preprocessing.py  feature_engineering.py  model_building.py  model_evaluation.py
github/: first.py  helper2.py
